--- a/collections.html
+++ b/collections.html
@@ -35,108 +35,87 @@
 
         </div>
     </nav>
+    
 
 
     <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="3000">
             <img src="warnerbrosbanner.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
+               <h3>Collections</h3>
             </div>
     <section class="collections">
+      <h1>Collections</h1>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card h-100">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="kung_fu_s1_2021_2000x3000.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Asian American and Pacific Islander Voices</h5>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="colorpurple_keyart2.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Black Voices</h5>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="last_of_us_s1_keyart.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">HBO</h5>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="ram_s1-6_keyart.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Binge</h5>
                 </div>
               </div>
             </div>
             <div class="col">
                 <div class="card h-100">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="blkadm_keyart_0.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">4K Movies</h5>
                   </div>
                 </div>
               </div>
               <div class="col">
                 <div class="card h-100">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="zacksnyders_justiceleague_keyart.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">DC</h5>
                   </div>
                 </div>
               </div>
               <div class="col">
                 <div class="card h-100">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="trick_r_treat_2000x3000.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Chills n' Thrills</h5>
                   </div>
                 </div>
               </div>
               <div class="col">
                 <div class="card h-100">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="classics_3_film_collection_keyart.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Classics</h5>
                   </div>
                 </div>
               </div>
               <div class="col">
                 <div class="card h-100">
-                  <img src="..." class="card-img-top" alt="...">
+                  <img src="game_of_thrones_complete_series_2000x3000.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card h-100">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card h-100">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card h-100">
-                  <img src="..." class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Fan Favorites</h5>
                   </div>
                 </div>
               </div>
